# xcfx-node

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  Cross.toml  README.md  biome.json  conflux.d.ts  conflux.js  index.ts  node.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  vite.config.ts  vitest.config.mts  vitest.config.ts
.cargo/: config.toml
.changeset/: angry-dolphins-promise.md  angry-things-warn.md  brave-swans-mate.md  early-mangos-decide.md  eight-kiwis-sin.md  eleven-cars-compete.md  eleven-pandas-press.md  kind-falcons-dress.md  long-guests-sin.md  loud-donkeys-wonder.md  lovely-parents-sparkle.md  nasty-dancers-exercise.md  nasty-nails-peel.md  nervous-maps-destroy.md  new-brooms-flow.md  nine-buses-burn.md  olive-eggs-check.md  olive-spiders-try.md  poor-ants-look.md  quick-spiders-deny.md  slimy-donuts-hammer.md  stupid-jobs-admire.md  sweet-glasses-enjoy.md  swift-islands-invent.md  tasty-dragons-battle.md  tricky-berries-help.md  twenty-jeans-count.md  unlucky-berries-listen.md  unlucky-dots-hang.md  warm-suits-sleep.md  wicked-lemons-join.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: CI.yml  changeset.yml  release.yml  release_conflux_rust.yml  test.yml
__test__/: configFIle.test.ts  createServer.test.ts  customConfig.test.ts  dataDir.test.ts  dataPersistence.test.ts  evmManualBlockGeneration.test.ts  genBlocksInterval.test.ts  genesis.test.ts  help.ts  internalContracts.test.ts  log.test.ts  manualBlockGeneration.test.ts  server.test.ts
__test__/fixtures/: custom_log.yaml
__test__/fixtures/testConfig/: config.toml
configs/: log.yaml
dockers/: aarch64-unknown-linux-gnu  x86_64-unknown-linux-gnu
lib/: conflux-instance.ts  sync.ts  types.d.ts  types.ts  worker.ts
lib/configs/: index.ts
lib/configs/pos_config/: genesis_file  public_key
lib/node/: node.ts  sync.d.ts  sync.ts
lib/process/: manager.d.ts  manager.ts
npm/darwin-arm64/: CHANGELOG.md  README.md  package.json
npm/darwin-x64/: CHANGELOG.md  README.md  package.json
npm/linux-arm64-gnu/: CHANGELOG.md  README.md  package.json
npm/linux-x64-gnu/: CHANGELOG.md  README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-x64-msvc/: CHANGELOG.md  README.md  package.json
pos_config/: initial_nodes.json  pos_config.yaml  pos_key  waypoint_config
src/: config.rs  error.rs  lib.rs
