[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "xcfx_node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
  
[dependencies]
napi = { version = "3.0.0-alpha.33", features = ['napi8', 'async'] }
napi-derive = "3.0.0-alpha.29"

cfxcore = { git = "https://github.com/iosh/conflux-rust", branch = "v2.5.0" }
primitives = { git = "https://github.com/iosh/conflux-rust", branch = "v2.5.0" }
client = { git = "https://github.com/iosh/conflux-rust", branch = "v2.5.0" }




chrono = "0.4.38"
parking_lot = "0.11"
log = "0.4"
tempfile = "3"
log4rs = { version = "1.2.0", features = ["background_rotation", "gzip"] }
[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[profile.release.package]
snappy-sys = { opt-level = 3 }
libtitan_sys = { opt-level = 3 }
rocksdb = { opt-level = 3 }
librocksdb_sys = { opt-level = 3 }
