[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "xcfx_node"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3.0.0-beta.7", features = ['napi8', 'async'] }
napi-derive = "3.0.0-beta.6"

# v3.0.1 branch
cfxcore = { git = "https://github.com/iosh/conflux-rust", rev = "995dceaa5207b48c0d60418c9d2b93fc87106af6" }
primitives = { git = "https://github.com/iosh/conflux-rust", rev = "995dceaa5207b48c0d60418c9d2b93fc87106af6" }
client = { git = "https://github.com/iosh/conflux-rust", rev = "995dceaa5207b48c0d60418c9d2b93fc87106af6" }
cfx-config = { git = "https://github.com/iosh/conflux-rust", rev = "995dceaa5207b48c0d60418c9d2b93fc87106af6" }
cfx-rpc-cfx-types = { git = "https://github.com/iosh/conflux-rust", rev = "995dceaa5207b48c0d60418c9d2b93fc87106af6" }
cfx-rpc-builder = { git = "https://github.com/iosh/conflux-rust", rev = "995dceaa5207b48c0d60418c9d2b93fc87106af6" }
chrono = "0.4"
parking_lot = "0.12"
log = "0.4"
tempfile = "3"
log4rs = { version = "1.2.0", features = ["background_rotation", "gzip"] }
[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[profile.release.package]
snappy-sys = { opt-level = 3 }
libtitan_sys = { opt-level = 3 }
rocksdb = { opt-level = 3 }
librocksdb_sys = { opt-level = 3 }
